fixed z-index of seal going over nav

--- a/styles.css
+++ b/styles.css
@@ -317,7 +317,7 @@ body.cs-open {
     background-color: #fff;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     position: fixed;
-    z-index: 2;
+    z-index: 10;
 }
 #cs-navigation .cs-container {
     width: 100%;
@@ -629,7 +629,7 @@ body.cs-open {
         display: block;
         position: relative;
         /* make it rest on top of the bg picture */
-        z-index: 10;
+        z-index: 1;
     }
 }
 /* Tablet - 768px */
